DASH-3518 add company-branding tutorial

--- a/src/company/appsco-company-brand-settings-page.html
+++ b/src/company/appsco-company-brand-settings-page.html
@@ -37,7 +37,7 @@
             }
         </style>
 
-        <paper-card heading="Brand settings" id="card">
+        <paper-card heading="Brand settings" id="companyBrandSettings">
             <paper-icon-button
                     icon="close"
                     title="Close"
@@ -123,7 +123,7 @@
                 sharedElements: {
                     value: function() {
                         return {
-                            'hero': this.$.card
+                            'hero': this.$.companyBrandSettings
                         }
                     }
                 }
