--- a/src/company/appsco-company-brand-settings.html
+++ b/src/company/appsco-company-brand-settings.html
@@ -150,7 +150,7 @@ Custom property | Description | Default
                     image-settings-api="[[ imageSettingsApi ]]"></appsco-company-image-settings>
         </div>
 
-        <paper-button id="submit"
+        <paper-button id="companyBrandSettingsSaveBtn"
                       class="submit-button"
                       on-tap="_submitForm">Save</paper-button>
 
