DASH-3531 [Frontend] 3. Branded login - Set customized login for your company

--- a/index.html
+++ b/index.html
@@ -96,14 +96,6 @@
     </style>
 </head>
 <body>
-<appsco-app
-        domain="https://my-dev.appsco.com/app_dev.php"
-        authorization-token="8bYlsdVghXg2e1sS125oiS1kFxr-uPDcLkyYSkYvVHY"
-        cookie-secure="0">
-
-</appsco-app>
-<script type="text/javascript">
-
-</script>
+<appsco-app domain="https://my-dev.appsco.com" authorization-token="" cookie-secure="1"></appsco-app>
 </body>
 </html>
