--- a/src/company/appsco-company-components-page.html
+++ b/src/company/appsco-company-components-page.html
@@ -183,7 +183,9 @@
                 </div>
             </paper-card>
 
-            <paper-card heading="Branded Login" >
+            <paper-card heading="Branded Login"
+                        id="companySettingsBrandedLoginCard"
+            >
                 <div class="card-content">
                     <p class="message">
                         Customize login form for your company and add your own branding.
@@ -191,7 +193,9 @@
                 </div>
 
                 <div class="card-actions">
-                    <paper-button on-tap="_onManageCompanyBrandedLogin">Manage</paper-button>
+                    <paper-button
+                            id="companySettingsBrandedLoginCardBtn"
+                            on-tap="_onManageCompanyBrandedLogin">Manage</paper-button>
                 </div>
             </paper-card>
         </div>
