DASH-3540 [Frontend] Groups card endless loading

--- a/src/applications/appsco-manage-application-components-page.html
+++ b/src/applications/appsco-manage-application-components-page.html
@@ -506,8 +506,8 @@
 
             _loadGroups: function() {
 
-                if (this.$$('appscoApplicationGroups') && this.$$('appscoApplicationGroups').$) {
-                    this.$$('appscoApplicationGroups').loadGroups();
+                if (this.$$('#appscoApplicationGroups') && this.$$('#appscoApplicationGroups').$) {
+                    this.$$('#appscoApplicationGroups').loadGroups();
                 }
             },
 
