--- a/src/company/appsco-company-components-page.html
+++ b/src/company/appsco-company-components-page.html
@@ -133,7 +133,7 @@
         </div>
 
         <div class="domains-labels">
-            <paper-card heading="Domains"
+            <paper-card heading="Domains" id="companySettingsDomainsCard"
                         class="appsco-company-domains">
                 <div class="card-content">
                     <appsco-company-domains id="appscoCompanyDomains"
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="card-actions">
-                    <paper-button on-tap="_onManageCompanyDomains">Manage</paper-button>
+                    <paper-button on-tap="_onManageCompanyDomains" id="companySettingsDomainsCardButton">Manage</paper-button>
                 </div>
             </paper-card>
 
