--- a/src/company/appsco-company-domain-item.html
+++ b/src/company/appsco-company-domain-item.html
@@ -216,8 +216,8 @@ Custom property | Description | Default
 
                 <div class="actions">
                     <template is="dom-if" if="[[ !_verified ]]">
-                        <paper-button on-tap="_onGetToken">Get token</paper-button>
-                        <paper-button on-tap="_onVerify">Verify</paper-button>
+                        <paper-button class="appsco-company-domain-item-get-token" on-tap="_onGetToken">Get token</paper-button>
+                        <paper-button class="appsco-company-domain-item-verify-token" on-tap="_onVerify">Verify</paper-button>
                     </template>
 
                     <paper-button on-tap="_onRemove">Remove</paper-button>
