--- a/src/company/appsco-company-page-actions.html
+++ b/src/company/appsco-company-page-actions.html
@@ -65,7 +65,7 @@
 
         <template is="dom-if" if="[[ _domainsActionsActive ]]">
             <div class="actions">
-                <paper-button class="add-action"
+                <paper-button class="add-action" id="companySettingsAddDomain"
                               on-tap="_onAddDomainAction">Add domain</paper-button>
             </div>
         </template>
