--- a/src/company/appsco-company-idp-settings-page.html
+++ b/src/company/appsco-company-idp-settings-page.html
@@ -30,7 +30,7 @@
             }
         </style>
 
-        <paper-card heading="IdP settings" id="card">
+        <paper-card heading="IdP settings" id="card" class="company-idp-settings-card">
             <paper-icon-button
                     icon="close"
                     title="Close"
