DASH-3551 Get started feature fixes

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
     </style>
 </head>
 <body>
-<appsco-app domain="https://my-dev.appsco.com" authorization-token="" cookie-secure="1"></appsco-app>
+<appsco-app
+        domain="https://my-dev.appsco.com"
+        authorization-token="6fbd320afc3d9e5ee4ea4f352940355b"
+        cookie-secure="1"
+></appsco-app>
 </body>
 </html>
