--- a/src/appsco-get-started-page.html
+++ b/src/appsco-get-started-page.html
@@ -11,6 +11,9 @@
                 margin-left: 12%;
                 margin-right: 12%;
             }
+            :host .get-started-header {
+                margin-bottom: 20px;
+            }
             :host .get-started-header h1 {
                 text-align: center;
                 font-size: 26px;
@@ -19,7 +22,7 @@
             }
             :host .get-started-header p {
                 text-align: center;
-                margin: 0px;
+                margin: 0;
                 padding: 2px;
             }
         </style>
@@ -30,10 +33,9 @@
                 <div class="content-container">
 
                     <div class="get-started-header">
-                        <h1>Welcome to AppsCo Business, [[ account.display_name ]]</h1>
-                        <p>Let's guide you through setting up the company</p>
-                        <p>You can take time and complete any section of the guide whenever you like</p>
-                        <p>Do not worry we will keep the menu active and save your progress until you are done</p>
+                        <h1>Welcome to AppsCo Business!</h1>
+                        <p>Let's guide you through the company setup.</p>
+                        <p>Take your time - we'll keep the menu active and save your progress until you're done.</p>
                     </div>
 
                     <div class="tutorials-holder">
